wip: add bst